# gitlab-xsearch

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
src/: client.rs  main.rs  models.rs
