[package]
name = "gitlab-xsearch"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive", "env"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
tokio = { version = "1.37", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
comfy-table = "7.1"
indicatif = "0.17"
rust_xlsxwriter = "0.76"
csv = "1.3"
futures = "0.3"
dotenvy = "0.15" # Useful for loading .env files if needed, though mostly using env vars directly
thiserror = "1.0" # Simplifies error handling
